horizontal overflow fixes.

--- a/public/index.css
+++ b/public/index.css
@@ -85,7 +85,7 @@ span {
 }
 
 .status-icon.active {
-	background-color: rgb(48, 81,59);
+	background-color: rgb(48, 81, 59);
 }
 
 
@@ -111,6 +111,11 @@ span {
 	overflow: scroll;
 	font-size: 15px;
 	font-family: palatino, serif;
+	word-wrap: ;
+	min-width: 180px;
+	overflow-x: scroll;
+	white-space: nowrap;
+
 }
 
 .tab-container {
@@ -150,6 +155,7 @@ span {
 	font-style: italic;
 	color: rgb(80,80,80);
 	font-family: tahoma;
+	vertical-align: top;
 }
 
 .instruction {
@@ -191,7 +197,7 @@ span {
 }
 
 .user-box {
-	max-width: 20%;
+	width: 20%;
 	padding: 5px;
 	background-color: rgba(100,100,80,.9);
 	text-align: left;
@@ -200,11 +206,15 @@ span {
 }
 
 .user {
-	color: rgb(220,220,220)
+	color: rgb(220,220,220);
+	word-wrap:break-word;
+	word-break: break-all;
 }
 
 .time {
-	color: rgb(40,40,40);	
+	color: rgb(40,40,40);
+	vertical-align: super;
+	margin-left: 5px;	
 }
 
 .message-text {
@@ -220,4 +230,9 @@ span {
 #bottom{
 	font-size: 0px;
 	height: .01vh;
+}
+
+.icon-box {
+	width: 25px;
+	height: 100%;
 }
